# ARIADNA-NEO4j-RAG

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  pyproject.toml
.claude/agents/: doc-keeper.md  fixer.md  module-dev.md  module-tester.md  reviewer.md  solver.md
deploy/: docker-compose.yml
docs/dev/: ARCHITECTURE.md  CONVENTIONS.md  ERRORS.md  TASK.md
docs/submission/: DEMO-SCRIPT.md  SUBMISSION.md
ontology/: ariadna.ttl  synonyms.yaml
scripts/: build_submission_archive.sh  lint_precomments.py
src/ariadna/: contracts.py  logutil.py
tests/analytics/: conftest.py  test_gap_map.py  test_recommendations.py
tests/deploy/: test_compose.py
tests/extraction/: test_llm_extract.py  test_ollama_client.py  test_postprocess.py  test_prompt.py  test_rules.py
tests/graph/: conftest.py  test_doc_geography_loader.py  test_entity_dedup.py  test_entity_graph_writer.py  test_entity_loader_cli.py  test_lexical_loader.py  test_ontology.py  test_templates.py
tests/ingest/: conftest.py  test_catalog.py  test_catalog_loader.py  test_chunk.py  test_convert.py  test_geo_classify.py  test_logutil.py  test_metadata.py  test_normalize.py  test_pipeline.py  test_processed_data_contracts.py  test_select.py
tests/search/: conftest.py  test_answer.py  test_embeddings.py  test_rag_demo.py  test_retrieval.py  test_router.py
tests/ui/: test_answer_cache.py  test_app.py  test_backend.py  test_export_md.py  (+4 more)
ui/: answer_cache.py  app.py  backend.py  citations_view.py  export_md.py  gap_view.py  question_view.py  recommendations_view.py  source_cards.py  subgraph_view.py
(+73 files in other folders)
