[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ariadna"
version = "0.1.0"
description = "Ариадна — GraphRAG-карта знаний R&D горно-металлургической отрасли"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pymupdf>=1.24",
    "python-pptx>=1.0",
    "pytest>=8.0",
    "pyyaml>=6.0",
    "neo4j>=5.24,<6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
